Attempting to fix background images on mobile devices

--- a/src/app/parallax-home/parallax-home.component.css
+++ b/src/app/parallax-home/parallax-home.component.css
@@ -1,4 +1,4 @@
-body{
+.body{
     height: 30em; 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -15,3 +15,5 @@ body{
      text-align: center;
      font-family: Rosarivo,Arial,Helvetica,sans-serif; 
   }
+
+
